--- a/Technomarkt_Ecommerce/UI/Views/Shared/_Layout.cshtml
+++ b/Technomarkt_Ecommerce/UI/Views/Shared/_Layout.cshtml
@@ -127,9 +127,7 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        @*<footer>
-                <p>&copy; @DateTime.Now.Year - TECHNOMARKT</p>
-            </footer>*@
+
     </div>
     <section id="footer">
 
@@ -157,11 +155,11 @@
                         <div class="footer-menu">
                             <h2 class="footer-wid-title">User Navigation </h2>
                             <ul>
-                                <li><a href="#">Login</a></li>
-                                <li><a href="#">Register</a></li>
-                                <li><a href="#">Wishlist</a></li>
-                                <li><a href="#">Cart</a></li>
-                                <li><a href="#">Home Page</a></li>
+                                <li><a href="/Home/Login">Login</a></li>
+                                <li><a href="/Home/Register">Register</a></li>
+                                <li><a href="/Home/Wishlist">Wishlist</a></li>
+                                <li><a href="/Cart/Index">Cart</a></li>
+                                <li><a href="/Home/Index">Home Page</a></li>
                             </ul>
                         </div>
                     </div>
