First supplier order created. Products successfully re-stocked. User comments will be created next.

--- a/Technomarkt_Ecommerce/UI/Areas/Admin/Views/Home/Index.cshtml
+++ b/Technomarkt_Ecommerce/UI/Areas/Admin/Views/Home/Index.cshtml
@@ -64,6 +64,7 @@
                     </td>
                     <td><a href="/Admin/Home/Update/@product.ID" class="btn btn-primary btn-sm">Update</a></td>
                     <td><a href="/Admin/Home/Delete/@product.ID" class="btn btn-danger btn-sm">Delete</a></td>
+                    <td><a href="/Admin/Home/AddToCart/@product.ID" class="btn btn-dark btn-sm">Order From Supplier</a></td>
                 </tr>
                 }
             </tbody>
