--- a/Technomarkt_Ecommerce/UI/Areas/Accountant/Views/SupplierOrder/Index.cshtml
+++ b/Technomarkt_Ecommerce/UI/Areas/Accountant/Views/SupplierOrder/Index.cshtml
@@ -1,11 +1,12 @@
 ﻿@model List<SupplierOrder>
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
+    Layout = "~/Areas/Accountant/Views/Shared/_Layout.cshtml";
 }
 
 <div class="text-center mt-5">
     <h2>SUPPLIER ORDERS</h2>
+    <h5>TOTAL EXPENSES: $@ViewBag.TotalExpense</h5>
 </div>
 
 <div class="row mt-5">
