--- a/Technomarkt_Ecommerce/UI/Areas/Depot/Views/Shared/_Layout.cshtml
+++ b/Technomarkt_Ecommerce/UI/Areas/Depot/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav ms-auto">
                         <a class="nav-link active" aria-current="page" href="~/Depot/Home/Index">Orders</a>
-                        <a class="nav-link active" aria-current="page" href="#">Supplier Orders</a>
+                        <a class="nav-link active" aria-current="page" href="~/Depot/SupplierOrder/Index">Supplier Orders</a>
                     </div>
                 </div>
             </div>
