Some adjustments made. Listing user comments needs to be fixed!

--- a/Technomarkt_Ecommerce/UI/Views/Home/AddComment.cshtml
+++ b/Technomarkt_Ecommerce/UI/Views/Home/AddComment.cshtml
@@ -13,9 +13,9 @@
             <form method="post" enctype="multipart/form-data">
                 <div class="form-group">
                     <label>Write Your Comment</label>
-                    @Html.TextAreaFor(x => x.Comment, new { @class = "form-control mt-5" })
+                    @Html.TextAreaFor(x => x.Comment, new { @class = "form-control mt-3" })
                 </div>
-                <button type="submit" class="btn btn-dark mt-3">Submit</button>
+                <button type="submit" class="btn btn-dark d-grid gap-2 col-2 mx-auto mt-3">Submit</button>
             </form>
         </div>
     </div>
