--- a/Technomarkt_Ecommerce/UI/Views/Home/Index.cshtml
+++ b/Technomarkt_Ecommerce/UI/Views/Home/Index.cshtml
@@ -27,7 +27,7 @@
             <div class="carousel-item" data-bs-interval="2000">
                 <img src="~/Content/img/PlayStation-5.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h2 class="carousel-caption-3">Playstation 5<br />BUY NOW!</h2>
+                    <h2 class="carousel-caption-3">Playstation 5<br /><button type="button" class="btn btn-lg btn-primary">BUY NOW!</button></h2>
                 </div>
             </div>
         </div>
