--- a/Technomarkt_Ecommerce/UI/Views/Shared/_Layout.cshtml
+++ b/Technomarkt_Ecommerce/UI/Views/Shared/_Layout.cshtml
@@ -187,6 +187,9 @@
                                 </form>
                                 <button type="button" class="btn btn-light">Subscribe</button>
                                 <h2 class="footer-brand">TECHNOMARKT</h2>
+                                <h4>Download Our App</h4>
+                                <button type="button" class="btn btn-light download-button"><i class="fab fa-apple"></i> Download</button>
+                                <button type="button" class="btn btn-light download-button"><i class="fab fa-google-play"></i> Download</button>
                             </div>
                         </div>
                     </div>
