--- a/Technomarkt_Ecommerce/UI/Views/Home/ProductDetails.cshtml
+++ b/Technomarkt_Ecommerce/UI/Views/Home/ProductDetails.cshtml
@@ -8,33 +8,39 @@
     <div class="container mt-5">
         <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-12">
-                <img src="~/Content/img/@Model.ProductImagePath" style="width:35em; height:auto; margin-top: 30px;" />
+                <img src="~/Content/img/@Model.ProductImagePath" style="width:32em; height:auto; margin-top: 30px;" />
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12">
                 <h3>@Model.ProductName</h3>
                 <h3>$@Model.UnitPrice</h3>
                 @if (Model.UnitsInStock < 100)
                 {
-                    <p style="color:red">Only a limited amount left in stocks!</p>
+                    <p style="color:red; font-weight:bold;">Only @Model.UnitsInStock left in stocks!</p>
                 }
                 <h5>Category: @Model.SubCategory.Category.CategoryName, @Model.SubCategory.SubCategoryName</h5>
                 <p style="margin-top: 30px; margin-bottom:30px;">@Model.Description</p>
-                <div class="row mt-2">
+                <div class="row d-grid gap-2 col-6 mx-auto">
                     @Html.ActionLink("Add to Cart", "AddToCart", "Home", new { id = Model.ID }, new { @class = "btn btn-dark" })
                 </div>
             </div>
             <div class="comment-section">
                 <div class="col-sm-12 col-md-12 col-lg-12 mx-auto mt-5">
                     @Html.ActionLink("Add Comment", "AddComment", "Home", null, new { @class = "btn btn-primary mt-5 mb-4" })
-                    <div class="card">
-                        <div class="card-header">
-                            <p style="margin:auto;">Posted by: Berk</p>
-                        </div>
-                        <div class="card-body">
-                            <p>TEST COMMENT</p>
-                            <p class="text-muted">Posted: 26 July 2022</p>
-                        </div>
-                    </div>
+                    @*@if (ViewBag.UserComment != null)
+                    {
+                        @foreach (UserComment userComment in ViewBag.UserComment)
+                        {
+                            <div class="card">
+                                <div class="card-header">
+                                    <p style="margin:auto;">Posted by: @userComment.Author</p>
+                                </div>
+                                <div class="card-body">
+                                    <p>@userComment.Comment</p>
+                                    <p class="text-muted">Posted: @userComment.CreatedDate</p>
+                                </div>
+                            </div>
+                        }
+                    }*@
                 </div>
 
             </div>
